_sass/_ed.scss
/* ... */
.indent-2 {
  padding-left: 2rem;
}

.indent-3 {
  padding-left: 3rem;
}

.indent-4 {
  padding-left: 4rem;
}

.indent-5 {
  padding-left: 5rem;
}

.indent-6 {
  padding-left: 6rem;
}

.indent-7 {
  padding-left: 7rem;
}

.indent-8 {
  padding-left: 8rem;
}

.indent-9 {
  padding-left: 9rem;
}

.indent-10 {
  padding-left: 10rem;
}

.poem .byline,
.poetry .byline {
  font-style: italic;
  font-weight: normal;
  letter-spacing: 0;
  margin-top: -.5rem;
}

/* Footnotes styles */
sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sup {
  top: -0.5em;
}

.footnotes {
  line-height: 1.2rem;
  font-size: 0.9rem;
  letter-spacing: .01rem;
}

.footnotes .foot-block {
  display: inline-block;
  padding: 0 4rem 0 2rem;
  margin-bottom: .8rem;
  font-style: italic;
}

a.footnote {
  padding-left: .1rem;
  font-size: .66rem;
}

/*Bibliography styles */
ol.bibliography {
  list-style-type:none;
  padding-left: 1rem;
  text-indent: -1rem;
}

/* Diplomatic editions */
ins,
.add {
  color:#288828;
  font-style: italic;
}

del,
.delete {
  text-decoration: line-through;
  color: #AA3232;
}

u,
.underline {
  text-decoration: underline;
}


/*
  Line layouts for prose-poetry and theater

  To use these layouts you need to add the classes to your markdown or HTML lines.
  (ex. "- {:.centered} hello!")
*/

li.centered {
  text-align: center;
}

li.speaker,
li.speakerGroup {
  text-align: center;
  padding-top: 1.2em;
}

li.speakerGroup {
  margin-bottom: -1.6em;
}

/* To add an attribution, make sure to make a line with the attribution class */

li.attribution {
  text-align: right;
  list-style: none;
  padding: 0rem 1.5rem 0rem 2rem;
  margin: 0 0 20px 0;
  color: #454545;
}

li.prose {
  list-style-position: inside;
  margin-left: -1em;
  text-indent: 0;
}

li.prose-indent {
  text-indent: 2rem;
}


/*
  Themes

  Applies custom color schemes by adding the appropriate class to the `body`. Based on colors from
  Base16: http://chriskempson.com/projects/base16/
*/

/* Red */
.theme-base-red .sidebar,
.theme-base-red .sidebar-toggle:active,
.theme-base-red #sidebar-checkbox:checked ~ .sidebar-toggle {
  background-color: #ac4142;
}

.theme-base-red .container a,
.theme-base-red .sidebar-toggle,
.theme-base-red .related-posts li a:hover {
  color: #ac4142;
}

/* Orange */
.theme-base-orange .sidebar,
.theme-base-orange .sidebar-toggle:active {
  background-color: #d28445;
}

.theme-base-orange .container a,
.theme-base-orange .sidebar-toggle,
.theme-base-orange .related-posts li a:hover {
  color: #d28445;
}

/* Green */
.theme-base-green .sidebar,
.theme-base-green .sidebar-toggle:active {
  background-color: #90a959;
}

.theme-base-green .container a,
.theme-base-green .sidebar-toggle,
.theme-base-green .related-posts li a:hover {
  color: #90a959;
}

/* Cyan */
.theme-base-cyan .sidebar,
.theme-base-cyan .sidebar-toggle:active {
  background-color: #75b5aa;
}

.theme-base-cyan .container a,
.theme-base-cyan .sidebar-toggle,
.theme-base-cyan .related-posts li a:hover {
  color: #75b5aa;
}

/* Blue */
.theme-base-blue .sidebar,
.theme-base-blue .sidebar-toggle:active {
  background-color: #6a9fb5;
}

.theme-base-blue .container a,
.theme-base-blue .sidebar-toggle,
.theme-base-blue .related-posts li a:hover {
  color: #6a9fb5;
}

/* Magenta */
.theme-base-magenta .sidebar,
.theme-base-magenta .sidebar-toggle:active {
  background-color: #aa759f;
}

.theme-base-magenta .container a,
.theme-base-magenta .sidebar-toggle,
.theme-base-magenta .related-posts li a:hover {
  color: #aa759f;
}

/* Brown */
.theme-base-brown .sidebar,
.theme-base-brown .sidebar-toggle:active {
  background-color: #8f5536;
}

.theme-base-brown .container a,
.theme-base-brown .sidebar-toggle,
.theme-base-brown .related-posts li a:hover {
  color: #8f5536;
}

/*Niko's edits*/

.m_garcia_trial h1 {
  text-align: center;
  margin-bottom: 25px;
}

div.editions {
  display: flex;
  justify-content: space-around;
}
div.editions a {
  display: block;
  text-align: center;
  /*color: #ac4142*/
}
.box {
  /*position: relative;*/
  display: flex;
  justify-content: center;
  align-items: center;
  /*
  height: 15em;
  width: 15em;
  */
  height: 250px;
  width: 250px;
  background-color: yellow;
}
.box span {
  color: black;
  font-size: 1em;
  text-align: center;
}
.jump_container {
  text-align: center;
}

#jump_pg, input[type = "button"] {
  font-size: 15px;
  margin-top: 2em;
}

.download_bt {
  position: absolute;
  top: 135px;
  right: 50px;

}
/*
.row {
  display: flex;
  gap: 2rem;
  align-items: flex-start;
}
*/
/* This is to make sure the return to toc button remains at the bottom of the page */
.row {
  display: flex;
  flex-wrap: wrap;
}
.column-left {
  float: left;
  width: 40%;
}
.column-right {
  float: left;
  width: 60%;
}
#folium {
  display: flex;
  position: sticky;
  justify-content: center;
  align-items: center;
}
.wide-page .container,
.wide-page .wrapper,
.wide-page .content {
  max-width: none;
  width: 98%;
  margin-left: 2rem;
}
.title_columned {
  text-align: center;
  margin-bottom: 1rem;
}

.bottom_buttons {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 150px;
}

